# NeksusJobSpec

./: .gitignore  AGENTS.MD  CHANGELOG.md  README.md  SECURITY.md  llms.txt  mkdocs.yml  pyproject.toml
.github/: README.md
.github/scripts/: smoke_ci.sh  smoke_wheel.sh
.github/workflows/: ci.yml  deploy-docs.yml  publish-pypi.yml
.neksus/: config.yaml
docs/: CNAME  README.md  api-reference.md  architecture.md  assistant-usage.md  cli-reference.md  content-vs-theme.md  contributing.md  examples-library.md  examples.md  exports.md  getting-started.md  how-it-works.md  index.md  installation.md  internal-api-reference.md  llm-usage.md  migration-0.1-to-0.2.md  model-reference.md  python-api.md  quickstart.md  release-notes.md  releasing.md  render-troubleshooting.md  rendering.md  roadmap-boundaries.md  schema.md  security.md  soft-professional-guide.md  specification.md  themes.md  versioning.md
docs/concepts/: architecture.md  how-it-works.md  rendering.md  specification.md  themes.md
docs/developer_guide/: setup.md
docs/examples/: README.md  feed-jobs.sample.json  feed-jobs.sample.xml  generic-export.sample.json  generic-export.sample.xml  linkedin-ready.sample.json  sitemap.sample.xml
docs/guides/: classic-dark-guide.md  classic-guide.md  cli-decision-guide.md  content-vs-theme.md  custom-theme-package.md  examples-library.md  examples.md  first-run-checklist.md  getting-started.md  html-rendering.md  installation.md  quickstart.md  render-troubleshooting.md  schema-export.md  scope-and-non-goals.md  soft-professional-guide.md  validation-and-strict-mode.md
docs/integrations/: assistant-usage.md  llm-integrations.md  mcp-install-matrix.md  mcp-server.md
docs/project/: contributing.md  release-notes.md  security.md  versioning.md
docs/reference/: api-reference.md  cli-reference.md  code-structure.md  internal-api-reference.md  model-reference.md  python-api.md  schema-editor-integration.md  schema.md
docs/user_guide/: cli-reference.md  get-started.md  jobspec-structure.md
examples/: campaign-active.jobspec.yaml  campaign-closed.jobspec.yaml  danish-job-detail.jobspec.yaml  job-detail.jobspec.yaml  jobspec.css  service-role.jobspec.yaml  startup-engineer.jobspec.yaml  theme-overrides.css
examples/themes/minimal/: README.md  manifest.json  template.html.j2  theme.css
fixtures/: README.md
fixtures/invalid/: empty-requirements.jobspec.yaml  missing-title.jobspec.yaml
fixtures/stitch/: isolated-jobspec-output.soft-professional.html
fixtures/themes/custom-basic/: manifest.json  template.html.j2  theme.css
fixtures/valid/: backend-engineer.jobspec.yaml  hybrid-sales-executive.jobspec.yaml  onsite-operations-manager.jobspec.yaml  remote-software-engineer.jobspec.yaml
jobspecs/: backend-engineer.jobspec.yaml  example.jobspec.yaml
neksus/: README.md  __init__.py
neksus/cli/: README.md  __init__.py  main.py
neksus/cli/commands/: README.md  check.py  common.py  config.py  init.py  render.py  spec.py  themes.py  version.py
neksus/core/: README.md  __init__.py  results.py
neksus/core/jobspec/: README.md  __init__.py  inspect.py  migrate.py  models.py  parser.py  renderer.py  schema.py  templates.py  validator.py
neksus/core/project/: README.md  __init__.py  checks.py  config.py  discovery.py  init_project.py
schemas/: jobspec.v1.json
scripts/: smoke.sh  smoke_wheel.sh
skills/: README.md
skills/chatgpt/: README.md  neksus-jobspec-skill.md
skills/claude/: README.md  neksus-jobspec-skill.md
skills/copilot/: README.md  neksus-jobspec-instructions.md
skills/gemini/: README.md  neksus-jobspec-skill.md
src/neksus_jobspec/: README.md  __init__.py  errors.py  output.py
src/neksus_jobspec/app/: README.md  __init__.py  doctor_service.py  dtos.py  feed_service.py  filesystem.py  project_context.py  project_service.py  render_use_case.py  spec_service.py  theme_dev_service.py
src/neksus_jobspec/jobspec/: README.md  __init__.py  exports.py  feeds.py  inspect.py  lint.py  migrate.py  models.py  parser.py  renderer.py  schema.py  templates.py  validator.py
src/neksus_jobspec/project/: README.md  __init__.py  checks.py  config.py  (+2 more)
src/neksus_jobspec_cli/: README.md  __init__.py  main.py
src/neksus_jobspec_mcp/: README.md  __init__.py  server.py  service.py
tests/: README.md  spec_builders.py  test_cli_check_github_format.py  test_cli_danish_example.py  test_cli_feed.py  test_cli_init.py  test_cli_job_detail_example.py  test_cli_render_batch.py  test_cli_spec_export_and_status.py  test_cli_spec_migrate.py  test_cli_spec_new_and_config.py  test_cli_spec_render.py  test_cli_spec_schema.py  test_cli_spec_templates.py  test_cli_spec_validate.py  test_cli_themes.py  test_cli_version.py  test_jobspec_components.py  test_jobspec_models.py  test_mcp_service.py  test_project_checks.py  test_project_config.py  test_public_api.py  test_release_hardening.py  test_soft_professional_contract.py  test_theme_engine.py
tests/arch/: test_architecture_boundaries.py
tests/cli/: test_cli_doctor.py  test_cli_feed.py  test_cli_job_detail_example.py  test_cli_output_golden.py  test_cli_render_batch.py  test_cli_spec_export_and_status.py  test_cli_spec_lint_preview.py  test_cli_spec_migrate.py  test_cli_spec_new_and_config.py  test_cli_spec_render.py  test_cli_spec_validate.py  test_cli_themes.py
tests/core/: test_jobspec_components.py  test_public_api.py  test_release_hardening.py  test_theme_contract.py  test_theme_engine.py  test_theme_parity_matrix.py
tests/integration/: test_cli_end_to_end.py  test_mcp_local_server.py
tests/mcp/: test_mcp_service.py
(+50 files in other folders)
