[project]
name = "neksus-jobspec"
version = "0.1.0"
description = "Local-first CLI and Python package for Neksus JobSpec files"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
  { name = "Neksus Team" },
]
keywords = ["cli", "jobspec", "yaml", "pydantic", "typer"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "Environment :: Console",
  "Typing :: Typed",
]
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.0.0",
  "PyYAML>=6.0",
  "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/NeksusAI/NeksusJobSpec"
Repository = "https://github.com/NeksusAI/NeksusJobSpec"
Documentation = "https://docs.jobspec.neksusai.com"
Issues = "https://github.com/NeksusAI/NeksusJobSpec/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "build>=1.2.0",
  "twine>=5.0.0",
]

[project.scripts]
neksus-jobspec = "neksus.cli.main:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neksus", "src/neksus_jobspec"]

[tool.hatch.build.targets.sdist]
include = [
  "/neksus",
  "/src/neksus_jobspec",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.hatch.build.targets.wheel.force-include]
"neksus/py.typed" = "neksus/py.typed"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-q"
markers = [
  "integration: end-to-end integration tests using real CLI and filesystem",
]
